--- a/css/style-bio.css
+++ b/css/style-bio.css
@@ -1,4 +1,5 @@
 /*Matthew Norbury - 16404219*/
+
 body {
     margin: 0px;
     font-family: 'Ubuntu', sans-serif;
@@ -8,11 +9,8 @@ body {
 }
 
 h1 {
-    text-align: left;
-    margin-top: .5em;
+    display: inline;
     color: #ffffff;
-    padding: .1em;
-    width: auto;
 }
 
 h2 {
@@ -29,22 +27,41 @@ p {
 
 a {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #ffffff;
     font-family: 'Ubuntu', sans-serif;
     width: 7em;
-    height: 2em;
 }
 
+ul {
+    text-align: left;
+    list-style-type: none;
+    margin: 0;
+    padding: .5em;
+    overflow: hidden;
+    background-color: #ffa500;
+}
+
+li {
+    float: right;
+}
+
+.header a {
+    display: block;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+}
+
+
 .header {
-    margin-top: -25px;
     width: 100%;
-    height: 85px;
+    height: 60px;
     background-color: #ffa500;
     font-family: 'Oswald', sans-serif;
     position: fixed;
 }
 
-#home {
+/*#home {
     top: 5px;
     left: 25%;
     position: fixed;
@@ -60,7 +77,7 @@ a {
     top: 5px;
     left: 75%;
     position: fixed;
-}
+}*/
 
 .footer {
     display: flex;
